# lantern

./: .gitignore  CMakeLists.txt  README.md  simple_test_dtype.cpp  simple_test_dtype.hpp  test_device_simple.cpp  test_device_simple.hpp  test_dtype
include/lantern/core/: allocator.hpp  device.hpp  dtype.hpp
include/minitorch/core/: dtype.hpp
src/core/: allocator.cpp
tests/: test_allocator.cpp  test_dtype.cpp
